# NEMO3Ana

./: CMakeLists.txt  ProcessAll.sh  ProcessLC.sh  ProcessLC_SCAN.sh  ProcessTMVA.sh  README.md
macro/: CompareResults.py  DefineFoilRegions.C  DefineFoilRegions.py  DrawBDTScore.C  DrawFinalVariable.py  Draw_SSD_vs_HSD.py  FinalPlot.C  FitAlphaDelayedTime.C  FitExternals.C  FitJoin.C  FitOneElectron.C  FitOneElectronCold.C  FitOneElectronColdWarm.C  FitOneElectronColdWarm_BkgPaperValues.C  FitOneElectronColdWarm_OLD.C  FitOneElectronOneAlpha.C  FitOneElectronOneAlpha_INOUT.C  FitOneElectronOneGamma.C  FitOneElectronOneGamma_FullConstrain.C  FitOneElectronTwoGamma.C  FitOneElectronTwoGamma_OLD.C  FitOneElectronWarm.C  FitOneElectron_Bi210.C  FitTestLocal.C  FitTwoElectron+OneElectronColdWarm.C  FitTwoElectron.C  FitTwoElectronColdWarm.C  FitTwoElectronColdWarmInOut.C  FitTwoElectronColdWarmInOut_HSD.C  FitTwoElectronColdWarmInOut_SYST.C  FitTwoElectronColdWarm_BkgPaperValues.C  FitTwoElectronColdWarm_HSD.C  FitTwoElectronSummedSamples.C  FitTwoElectron_BkgPaperValues.C  LoadAllDataSample.C  LoadAllDataSampleBkg.C  LoadAllDataSample_run_1872_7920.C  LoadAlphaDataSample.C  MakeCollieIO.sh  PlotStyle.C  (+25 more)
prod/: DataLists  batchScript.py
prod/ConfigFiles/: #1eNgP2_testNewScript.cfg#  1eNgP2_testNewScript.cfg  ElectronAlphaAnalysis.cfg  ElectronGammaAnalysis.cfg  SingleElectronAnalysis.cfg  SingleElectronExe_noisy.cfg  TwoElectronNtuplizer.cfg  TwoElectronNtuplizer_Ext.cfg  TwoElectronNtuplizer_Int.cfg  TwoElectronNtuplizer_NoisyHits.cfg
prod/JobLists/: Cd116_AllDatasets.jobs  Cd116_ElectronAlpha.jobs  Cd116_ElectronGamma.jobs  ElectronAlpha.jobs  ElectronGamma.jobs  ElectronGamma_Mo100_Only.jobs  ElectronGamma_first_294.jobs.keep  ElectronGamma_second_276.jobs  ElectronGamma_second_cd116.jobs  ElectronGamma_third_395.jobs.keep  Missing_Pa234m.lst  SingleElectron.jobs  SingleElectronData.jobs  SingleElectronInternal.jobs  SingleElectron_first_461.jobs  SingleElectron_last_526.jobs.keep  Te130_AllSamples.jobs  Te130_Backgrounds.jobs  Te130_ElectronAlpha.jobs  Te130_Signal.jobs  TwoElectronNtupleOnu.jobs  TwoElectronNtuple_ext.jobs  TwoElectronNtuple_ext_first_428.jobs.keep  TwoElectronNtuple_ext_last_313.jobs  TwoElectronNtuple_first_391.jobs  TwoElectronNtuple_int.jobs  TwoElectronNtuple_last_383.jobs  TwoElectronNtuple_new.jobs  internalBackgrounds.lst
prod/JobLists/old_jobs/: TwoElectronNtuple.jobs  TwoElectronNtuple_first_500.jobs  TwoElectronNtuple_last_143.jobs
src/: Component.cc  Component.h  DataManagement.cc  DataManagement.h  DataSet.cc  DataSet.h  Fit.cc  Fit.h  Group.cc  Group.h  HistoCollection.cc  HistoCollection.h  LinkDef.h  LoadDataSet.h  Observable.cc  Observable.h  Parameter.cc  Parameter.h  ProcessChannel.cc  ProcessChannel.h  collieIO_BDT.cc  collieIO_EXEMPLE.cc  collieIO_En.cc  collieIOexample.cc  collieLC.cc  collieLC_BDT.cc  collieLC_m1s.cc  collieLC_p1s.cc
weights/: TMVAClassification_M1_BDT.class.C  TMVAClassification_M1_BDT.weights.xml  TMVAClassification_M1_Cuts.class.C  TMVAClassification_M1_Cuts.weights.xml  TMVAClassification_M2_BDT.class.C  TMVAClassification_M2_BDT.weights.xml  TMVAClassification_M2_Cuts.class.C  TMVAClassification_M2_Cuts.weights.xml  TMVAClassification_M3_BDT.class.C  TMVAClassification_M3_BDT.weights.xml  TMVAClassification_M3_Cuts.class.C  TMVAClassification_M3_Cuts.weights.xml  TMVAClassification_M7_BDT.class.C  TMVAClassification_M7_BDT.weights.xml  TMVAClassification_M7_Cuts.class.C  TMVAClassification_M7_Cuts.weights.xml  TMVAClassification_MM_BDT.class.C  TMVAClassification_MM_BDT.weights.xml  TMVAClassification_MM_Cuts.class.C  TMVAClassification_MM_Cuts.weights.xml  TMVAClassification_RHC_BDT.class.C  TMVAClassification_RHC_BDT.weights.xml  TMVAClassification_RHC_E_BDT.class.C  TMVAClassification_RHC_E_BDT.weights.xml  TMVAClassification_RHC_E_Cuts.class.C  TMVAClassification_RHC_E_Cuts.weights.xml  TMVAClassification_RHC_L_BDT.class.C  TMVAClassification_RHC_L_BDT.weights.xml  TMVAClassification_RHC_L_Cuts.class.C  TMVAClassification_RHC_L_Cuts.weights.xml
